src/objects/SFDC_SecurityUserHistory__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>DateOfUpdate__c</fullName>
        <label>DateOfUpdate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Field_Changed__c</fullName>
        <label>Field Changed</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserUpdated__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UserUpdated</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SFDC_SecurityUserHistorys1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SFDC_SecurityUserHistorys</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SFDC_SecurityUserHistory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>UserUpdated__c</columns>
        <columns>Field_Changed__c</columns>
        <columns>Old_Value__c</columns>
        <columns>New_Value__c</columns>
        <columns>User__c</columns>
        <columns>DateOfUpdate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SFDC_SecurityUserHistorys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>